# hope-flex-fields

./: .bumpversion.cfg  .gitignore  .mypy.ini  .pdm-python  .pre-commit-config.yaml  CHANGES  README.md  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/: file-filters.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/_theme/js/: address.min.js  js.cookie.min.js
docs/src/: .pages  contributing.md  examples.md  index.md  install.md  reference.md
src/hope_flex_fields/: __init__.py  admin.py  apps.py  config.py  exceptions.py  fields.py  file_handlers.py  forms.py  importers.py  mixin.py  models.py  registry.py  types.pyi  utils.py  validators.py  widgets.py  xlsx.py
src/hope_flex_fields/admin/: __init__.py  datachecker.py  definition.py  fieldset.py  flexfield.py
src/hope_flex_fields/api/: serializers.py  views.py
src/hope_flex_fields/attributes/: abstract.py  default.py  registry.py
src/hope_flex_fields/migrations/: 0001_initial.py  0001_squashed_0010_rename_field_flexfield_definition.py  0002_auto_20240708_1316.py  0002_fieldset_content_type.py  0003_alter_datachecker_id_alter_datacheckerfieldset_id_and_more.py  0004_auto_20241009_0643.py  0005_remove_fielddefinition_unique_name_and_more.py  0006_alter_datachecker_id_alter_datacheckerfieldset_id_and_more.py  0007_create_default_fields.py  0008_fielddefinition_attributes_strategy_and_more.py  0009_fielddefinition_strategy_config.py  0010_rename_field_flexfield_definition.py  0011_alter_datachecker_id_alter_datacheckerfieldset_id_and_more.py  0012_flexfield_master_alter_datachecker_id_and_more.py  0013_fielddefinition_validated_alter_datachecker_id_and_more.py  0014_add_group_fields.py  0014_datacheckerfieldset_group_and_more.py  0015_alter_datachecker_id_alter_datacheckerfieldset_id_and_more.py
src/hope_flex_fields/models/: __init__.py  base.py  datachecker.py  definition.py  field.py  fieldset.py  flexfield.py
src/hope_flex_fields/static/flex_fields/jsoneditor/: django-jsoneditor.css  django-jsoneditor.scss
src/hope_flex_fields/templates/admin/hope_flex_fields/: app_index.html  import_config.html
src/hope_flex_fields/templates/flex_fields/: customize.html  editor.html  inspect.html  test.html
src/hope_flex_fields/templates/flex_fields/datachecker/: validate.html
src/hope_flex_fields/templates/flex_fields/fielddefinition/: configure.html  test.html
src/hope_flex_fields/templates/flex_fields/fieldset/: add_field.html  analyse.html  diff.html  fields.html  test.html
src/hope_flex_fields/templates/flex_fields/fieldsetfield/: test.html
tests/: .coveragerc  conftest.py  test_api.py  test_attributes_abstract.py  test_choices.py  test_examples.py  test_field.py  test_groups.py  test_importers.py  test_jsvalidator.py  test_master_detail.py  test_models.py  test_registry.py  test_sample_code.py  test_serialization.py  test_usage.py  test_validate.py  test_validate_parent_child.py  test_xlsx.py
tests/admin/: data.json  test_admin_checker.py  test_admin_definition.py  test_admin_field.py  test_admin_fieldset.py  test_admin_fieldsetfield.py  test_admin_flexfield.py  test_admin_smoke.py  test_import_export.py
tests/extra/demoapp/demo/: apps.py  backends.py  settings.py  strategy.py  urls.py
tests/extra/demoapp/demo/management/commands/: demo.py
tests/extra/testutils/: factories.py
tests/models/: test_base.py  test_definition.py  test_flexfield.py  test_model_definition.py  test_model_fieldset.py  test_model_flexfield.py  test_model_naturalkeys.py  test_model_strategies.py
