[project]
name = "hope-flex-fields"
version = "0.1.0"
description = ""
authors = [
    {name = "sax", email = "s.apostolico@gmail.com"},
]
dependencies = [
    "django-strategy-field>=3.1.0",
    "django-regex>=0.5.0",
    "django-regex-field>=3.1.0",
    "django-admin-extra-buttons>=1.5.8",
    "django-jsoneditor>=0.2.4",
    "djangorestframework>=3.15.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | ~build
  | build
  | ops
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
default_section = "THIRDPARTY"
known_first_party = []
known_django = "django"
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
include_trailing_comma = true
skip = ["migrations", "snapshots", ".venv"]


[tool.django-stubs]
django_settings_module = "hope_dedup_engine.config.settings"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "django>=3,<4",
    "pytest>=8.2.2",
    "django-factory-boy>=1.0.0",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "pre-commit>=3.7.1",
    "freezegun>=1.5.1",
    "mypy>=1.10.1",
    "pdbpp>=0.10.3",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "django-webtest>=1.9.11",
    "responses>=0.25.3",
    "django-csp>=3.8",
]

[tool.pdm.scripts]
coverage = "pytest tests/ --cov -n auto --create-db -c pytest.ini"
act = "act"
