[project]
name = "hope-flex-fields"
version = "0.7.0"
description = ""
readme = "README.md"
license = { text = "MIT" }

authors = [
  { name = "sax", email = "s.apostolico@gmail.com" },
]

requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "deepdiff",
  "deprecation",
  "django-admin-extra-buttons",
  "django-adminactions",
  "django-jsoneditor",
  "django-regex",
  "django-regex-field",
  "django-strategy-field",
  "djangorestframework",
  "jmespath",
  "jsonpickle",
  "mini-racer",
  "python-calamine",
  "requests",
  "xlsxwriter",
]
optional-dependencies.docs = [
  "mkdocs",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-material",
  "mkdocstrings-python",
]

[tool.uv]
dev-dependencies = [
  "bandit",
  "black",
  "bump2version",
  "django-csp",
  "django-factory-boy",
  "django-webtest",
  "django",
  "flake8-html",
  "flake8",
  "freezegun",
  "isort",
  "mypy",
  "pdbpp",
  "pre-commit",
  "pytest-cov",
  "pytest-django",
  "pytest",
  "responses",
  "pytest-xdist",
  "tox",
  "requests",
]

[tool.django-stubs]
django_settings_module = "hope_dedup_engine.config.settings"
